[project]
name = "littlew"
version = "0.1.0"
description = "littlew"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["haruka_bot", "nonebot_plugin_status"]
plugin_dirs = []
builtin_plugins = ["echo"]
